--- a/index.html
+++ b/index.html
@@ -1,34 +1,104 @@
-<!-- Save this as index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Wedding Invitation</title>
+
+  <!-- Wedding-style font -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+
   <style>
-    body {
+    /* Reset */
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
-      color: white;
-      text-align: center;
-    }
-    h1 {
-      font-size: 4rem;
+      padding: 0;
+      box-sizing: border-box;
     }
 
+    body {
+      font-family: Arial, sans-serif;
+      background: #fff8f0;
+      color: #4a3c31;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    h1.invitation {
+      font-size: 4rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      letter-spacing: 0.2em;
+      color: #a67c52;
+    }
+
+    p.invite-text {
+      font-family: 'Great Vibes', cursive;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      max-width: 600px;
+      line-height: 1.3;
+      color: #6b4f3f;
+    }
+
+    p.date-info {
+      font-size: 1.25rem;
+      margin-bottom: 5rem;
+      color: #8c7253;
+      font-weight: 600;
+    }
+
+    .flower {
+      width: 80vw;
+      max-width: 400px;
+      margin-bottom: 3rem;
+      user-select: none;
+    }
+
+    /* Responsive */
     @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
+      h1.invitation {
+        font-size: 3rem;
+      }
+      p.invite-text {
+        font-size: 1.5rem;
+      }
+      p.date-info {
+        font-size: 1rem;
+      }
+      .flower {
+        max-width: 300px;
       }
     }
   </style>
 </head>
 <body>
-  <h1>Hello 🌍</h1>
+  <h1 class="invitation">INVITATION</h1>
+
+  <p class="invite-text">
+    You are invited to the wedding celebration of<br />
+    <strong>Tung Sahur &amp; Tralalelo Trala</strong>
+  </p>
+
+  <p class="date-info">
+    Saturday, 20th July 2025<br />
+    4:00 PM - 10:00 PM<br />
+    The Grand Garden Hall, City Center
+  </p>
+
+  <!-- Simple flower SVG -->
+  <svg
+    class="flower"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 64 64"
+    fill="#a67c52"
+  >
+    <circle cx="32" cy="32" r="6" />
+    <path d="M32 2v10M32 52v10M2 32h10M52 32h10M11 11l7 7M46 46l7 7M11 53l7-7M46 18l7-7" stroke="#a67c52" stroke-width="3" stroke-linecap="round"/>
+  </svg>
 </body>
 </html>
