Update sticky border2

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </head>
 <body>
 <!-- Sticky Floral Background -->
-<img src="images/floral-background.png" alt="Floral Background" class="border-bg" />
+<img src="images/flower_border.png" alt="Floral Background" class="border-bg" />
  
   <div class="invitation-wrapper">
 <div class="invitation-content">
